# deep-scout

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  run.py  streamlit_app.py
app/agents/: base.py  context.py  drafter.py  scout.py  validator.py
app/core/: logging_config.py  prompt.py  providers.py  settings.py
app/prompts/: _loader.py  _registry.yaml
app/prompts/agents/critic/: v1.yaml
app/prompts/agents/drafter/: v1.yaml
app/prompts/agents/planner/: v1.yaml
app/prompts/agents/scout/: v1.yaml
app/prompts/agents/synthesizer/: v1.yaml
app/prompts/agents/validator/: v1.yaml
app/prompts/formats/: comparison.yaml  deep-dive.yaml  explain.yaml  tutorial.yaml
app/schemas/: export.py  output.py  research.py  tool_result.py
app/scout_agents/: __init__.py  critic.py  drafter.py  planner.py  scout.py  synthesizer.py
app/tools/: __init__.py  base.py  scrape.py
app/tools/search/: serper.py  tavily.py
app/workflow/: graph.py  memory.py  session.py
